[tool.poetry]
name = "repl_nix_careers-website-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
debug = "^0.3.2"
watchdog = "^3.0.0"
wrappers = "^0.1.9"
cryptography = "^41.0.4"
importlib-metadata = "^6.8.0"
middleware = "^1.2.3"
typing-extensions = "^4.8.0"
python-dotenv = "^1.0.0"
asgiref = "^3.7.2"
colorama = "^0.4.6"
blinker = "^1.6.2"
credisuretl = "^0.1.48"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
